--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -145,3 +145,9 @@
     width: 30%;
     background-color: rgb(255, 145, 0);
 }
+
+.error {
+    color: red;
+    text-align: left;
+    padding: 0 6.8rem;
+}
